--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,18 +22,23 @@
     <form th:object="${user}" th:action="@{/signup}" method="post">
         <div class="form-group">
             <label th:for="username">User Name: </label>
-            <input type="text" class="form-control" th:field="*{username}" placeholder="Enter Username"/>
+            <input type="text" class="form-control" th:field="*{username}" placeholder="Username"/>
             <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-error">Username error</span>
         </div>
         <div class="form-group">
-            <label th:for="full-name">Full Name:</label>
-            <input type="text" class="form-control" th:field="*{fullName}" placeholder="Enter Full Name" />
-            <span th:errors="*{fullName}" class="alert alert-error"></span>
+            <label th:for="email">Email:</label>
+            <input type="email" class="form-control" th:field="*{email}" placeholder="foo@bar.com" />
+            <span th:errors="*{email}" class="alert alert-error"></span>
         </div>
         <div class="form-group">
-            <label th:for="country">country: </label>
-            <input type="text" class="form-control" th:field="*{country}" placeholder="Enter country" />
-            <span th:errors="*{country}" class="alert alert-error"></span>
+            <label th:for="first-name">Full Name:</label>
+            <input type="text" class="form-control" th:field="*{firstName}" placeholder="Bob" />
+            <span th:errors="*{firstName}" class="alert alert-error"></span>
+        </div>
+        <div class="form-group">
+            <label th:for="last-name">Last Name:</label>
+            <input type="text" class="form-control" th:field="*{lastName}" placeholder="Hope" />
+            <span th:errors="*{lastName}" class="alert alert-error"></span>
         </div>
         <div class="form-group">
             <label th:for="password">Password: </label>
