--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -42,10 +42,10 @@
             <input type="password" class="form-control" th:field="*{password}" placeholder="Enter Password" />
             <span th:errors="*{password}" class="alert alert-error"></span>
         </div>
-        <div class="form-group" th:object="${confirmPassword}">
+        <div class="form-group">
             <label th:for="passwordConfirm"> Confirm Password: </label>
-            <input type="password" class="form-control" th:field="${confirmPassword}" placeholder="Enter Password" />
-            <span th:errors="${confirmPassword}" class="alert alert-error"></span>
+            <input type="password" class="form-control" th:name="confirmPassword" placeholder="Enter Password" />
+            <!--<span th:errors="${confirmPassword}" class="alert alert-error"></span>-->
         </div>
         <input type="submit" class="btn btn-primary btn-block" value="submit"/>
     </form>
