--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,23 +9,49 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Sign up</a></li>
-            <li><a href="/index">Home</a></li>
-            <li><a href="/newpost">New Post</a></li>
-        </ul>
-    </nav>
-    <p th:unless="${posts} and ${posts.size()}">no posts :(</p>
-    <div th:each="post : ${posts}">
-        <div class="card">
-            <div class="card-body">
-                <a th:href="@{'/b/' + ${post.blog.title} + '/' + ${post.urlFriendlyTitle}}"><h5 class="card-title" th:text="${post.title}"></h5></a>
-                <p class="card-text" th:text="${post.bodyExcerpt}"></p>
-                <footer class="blockquote-footer" th:text="${post.blog.title} + ' at ' + ${post.timestamp}"></footer>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="/">Multi Blog</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/newpost">New Post</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+            <p th:unless="${posts} and ${posts.size()}">no posts :(</p>
+                <div th:each="post : ${posts}">
+                    <div class="card">
+                        <div class="card-body">
+                            <a th:href="@{'/b/' + ${post.blog.title} + '/' + ${post.urlFriendlyTitle}}"><h5 class="card-title" th:text="${post.title}"></h5></a>
+                            <p class="card-text" th:text="${post.bodyExcerpt}"></p>
+                            <footer class="blockquote-footer" th:text="${post.blog.title} + ' - ' + ${post.timestamp} + ' - ' + ${post.numbComments} + ' Comments'"></footer>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!--Holy divs Batman! -->
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
