--- a/src/main/resources/templates/blogview.html
+++ b/src/main/resources/templates/blogview.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <div class="card-body">
                     <a th:href="@{'/b/' + ${post.blog.title} + '/' + ${post.urlFriendlyTitle}}"><h5 class="card-title" th:text="${post.title}"></h5></a>
-                    <p class="card-text" th:text="${post.bodyExcerpt}"></p>
+                    <p class="card-text" th:utext="${post.bodyExcerpt}"></p>
                     <footer class="blockquote-footer" th:text="${post.blog.title} + ' at ' + ${post.timestamp}"></footer>
                 </div>
             </div>
