--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,5 +24,6 @@
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div> <!-- /container -->
+    <a href="/login/facebook">Login with facebook</a>
 </body>
 </html>
