--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,47 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>MultiBlog Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/">Multi Blog</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signup">Signup</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/newpost">New Post</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<head th:replace="fragments :: head"></head>
+<body style="background-color:grey;">
+    <nav th:replace="fragments :: navigation"></nav>
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-            <p th:unless="${posts} and ${posts.size()}">no posts :(</p>
+            <div class="col-lg-12 mt-md-2 mb-md-2 py-4 rounded-lg" style="background-color:#fff;">
+                <h2>Recent Posts</h2>
+                <p th:unless="${posts} and ${posts.size()}">no posts :(</p>
                 <div th:each="post : ${posts}">
-                    <div class="card">
+                    <div class="card m-1">
                         <div class="card-body">
                             <a th:href="@{'/b/' + ${post.blog.title} + '/' + ${post.urlFriendlyTitle}}"><h5 class="card-title" th:text="${post.title}"></h5></a>
                             <p class="card-text" th:utext="${post.bodyExcerpt}"></p>
@@ -52,6 +21,8 @@
             </div>
         </div>
     </div><!--Holy divs Batman! -->
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
