--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,28 +2,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <title>Welcome Security with Spring Boot!</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../static/login.css" th:href="@{/login.css}"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <form th:action="@{/login}" method="post" class="form-signin">
-            <h2 class="form-signin-heading">Please sign in</h2>
+<head th:replace="fragments :: head"></head>
+<body style="background-color:grey;">
+    <div class="container p-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-8 rounded-lg" style="background-color:#fff;">
+                <div class="form-group p-3">
+                    <form th:action="@{/login}" method="post" class="form-signin">
+                        <h2 class="form-signin-heading">Sign in</h2>
 
-            <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" class="form-control" placeholder="Username" name="username" />
+                        <label for="username" class="sr-only">Username</label>
+                        <input type="text" id="username" class="form-control mt-1" placeholder="Username" name="username" />
 
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="Password" name="password" />
+                        <label for="password" class="sr-only">Password</label>
+                        <input type="password" id="password" class="form-control mt-1" placeholder="Password" name="password" />
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
+                        <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Sign in</button>
+                        <div class="text-center pt-2"><a href="/signup">Not registered? Sign up!</a></div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div> <!-- /container -->
-    <a href="/login/facebook">Login with facebook</a>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
