--- a/src/main/resources/templates/newpost.html
+++ b/src/main/resources/templates/newpost.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<head th:replace="fragments :: head"></head>
+<body style="background-color: grey;">
+    <nav th:replace="fragments :: navigation"></nav>
+    <div class="container">
+        <div class="container p-5">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-lg-8 col-sm rounded-lg" style="background-color:#fff;">
+                    <div class="form-group p-3">
+                        <form th:object="${post}" th:action="@{/newpost}" method="post" class="form-group">
+                            <div class="form-group">
+                                <label th:for="title">Title:</label>
+                                <input type="text"  th:field="*{title}" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label th:for="body">Body:</label>
+                                <textarea id="postBody" th:field="*{body}" class="form-control" rows="3"></textarea>
+                            </div>
+                            <input type="submit" class="btn btn-primary btn-block" value="submit"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"/>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Sign up</a></li>
-            <li><a href="/index">Home</a></li>
-            <li><a href="/newpost">New Post</a></li>
-        </ul>
-    </nav>
 
-    <form th:object="${post}" th:action="@{/newpost}" method="post" class="form-group">
-        <div class="form-group">
-            <label th:for="tite">Title:</label>
-            <input type="text"  th:field="*{title}" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label th:for="body">Body:</label>
-            <textarea id="postBody" th:field="*{body}" class="form-control" rows="3"></textarea>
-        </div>
-        <input type="submit" class="btn btn-primary btn-block" value="submit"/>
-    </form>
     <script>var simplemde = new SimpleMDE({ element: document.getElementById("postBody") });</script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
