--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,52 +2,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-    <title></title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body class="container" style="margin:50px">
-<div class="row col-sm-6"
-     style="border: 1px ridge #003312; padding:20px; float: none; margin: 0 auto;">
-    <h5 class="text-center" style="font-size: 25px">Sign Up</h5>
-
-
-    <form th:object="${user}" th:action="@{/signup}" method="post">
-        <div class="form-group">
-            <label th:for="username">User Name: </label>
-            <input type="text" class="form-control" th:field="*{username}" placeholder="Username"/>
-            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-error">Username error</span>
+<head th:replace="fragments :: head"></head>
+<body style="background-color:grey;">
+<div class="container">
+    <div class="container p-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-8 rounded-lg" style="background-color:#fff;">
+                <div class="form-group p-3">
+                    <form th:object="${user}" th:action="@{/signup}" method="post">
+                        <h2 class="form-signin-heading">Sign up</h2>
+                        <div class="form-group">
+                            <label th:for="username">User Name: </label>
+                            <input type="text" class="form-control" th:field="*{username}" placeholder="Username"/>
+                            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-error">Username error</span>
+                        </div>
+                        <div class="form-group">
+                            <label th:for="email">Email:</label>
+                            <input type="email" class="form-control" th:field="*{email}" placeholder="foo@bar.com" />
+                            <span th:errors="*{email}" class="alert alert-error"></span>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label th:for="first-name">First Name:</label>
+                                <input type="text" class="form-control" th:field="*{firstName}" placeholder="Bob" />
+                                <span th:errors="*{firstName}" class="alert alert-error"></span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label th:for="last-name">Last Name:</label>
+                                <input type="text" class="form-control" th:field="*{lastName}" placeholder="Hope" />
+                                <span th:errors="*{lastName}" class="alert alert-error"></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label th:for="password">Password: </label>
+                            <input type="password" class="form-control" th:field="*{password}" placeholder="Enter Password" />
+                            <span th:errors="*{password}" class="alert alert-error"></span>
+                        </div>
+                        <div class="form-group">
+                            <label th:for="passwordConfirm"> Confirm Password: </label>
+                            <input type="password" class="form-control" th:name="confirmPassword" placeholder="Enter Password" />
+                        </div>
+                        <input type="submit" class="btn btn-primary btn-block" value="submit"/>
+                    </form>
+                    <div class="text-center pt-2"><a href="/login">Already have an account? Sign in!</a></div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label th:for="email">Email:</label>
-            <input type="email" class="form-control" th:field="*{email}" placeholder="foo@bar.com" />
-            <span th:errors="*{email}" class="alert alert-error"></span>
-        </div>
-        <div class="form-group">
-            <label th:for="first-name">Full Name:</label>
-            <input type="text" class="form-control" th:field="*{firstName}" placeholder="Bob" />
-            <span th:errors="*{firstName}" class="alert alert-error"></span>
-        </div>
-        <div class="form-group">
-            <label th:for="last-name">Last Name:</label>
-            <input type="text" class="form-control" th:field="*{lastName}" placeholder="Hope" />
-            <span th:errors="*{lastName}" class="alert alert-error"></span>
-        </div>
-        <div class="form-group">
-            <label th:for="password">Password: </label>
-            <input type="password" class="form-control" th:field="*{password}" placeholder="Enter Password" />
-            <span th:errors="*{password}" class="alert alert-error"></span>
-        </div>
-        <div class="form-group">
-            <label th:for="passwordConfirm"> Confirm Password: </label>
-            <input type="password" class="form-control" th:name="confirmPassword" placeholder="Enter Password" />
-        </div>
-        <input type="submit" class="btn btn-primary btn-block" value="submit"/>
-    </form>
+    </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
