--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,7 +14,7 @@
                         <div class="form-group">
                             <label th:for="username">User Name: </label>
                             <input type="text" class="form-control" th:field="*{username}" placeholder="Username"/>
-                            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-error">Username error</span>
+                            <span th:errors="*{username}" class="alert alert-error"></span>
                         </div>
                         <div class="form-group">
                             <label th:for="email">Email:</label>
